# a2a-mcp-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
src/a2a_mcp_bridge/: server.py
tests/: test_server.py
